--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -625,8 +625,8 @@ Final result, with identities to assist efficient matrix exponentiation optimise
 	\nu_5 & =(-\Delta \Rtwozero + \kex + \imath \dw) \nu_{1s} + 2 (\nu_4 + \kAB F_1^{a+b}) \sinh(E_1) , \\
     y & = \left( \frac{\nu_{1c} - \nu_3}{\nu_{1c} + \nu_3} \right) ^ {\ncyc} , \\
 	T & = \frac{1}{2}(1 + y) + \frac{(1 - y)\nu_5}{2 \nu_3 N} , \\
-	\RtwoeffCR & = \frac{(\RtwozeroA + \RtwozeroB + \kex)}{2} - \frac{\ncyc}{\taucpmg} \, \arccosh(\, \operatorname{Re}(\nu_{1c}) \, ) , \\
-	\Rtwoeff & = \RtwoeffCR - \frac{1}{\taucpmg} \log(\operatorname{Re}(T)) .
+	\RtwoeffCR & = \frac{(\RtwozeroA + \RtwozeroB + \kex)}{2} - \frac{\ncyc}{\taucpmg} \, \arccosh(\, \Re(\nu_{1c}) \, ) , \\
+	\Rtwoeff & = \RtwoeffCR - \frac{1}{\taucpmg} \log(\Re(T)) .
 \end{align}
 \end{subequations}
 
