The \arccosh LaTeX maths operator is now defined in the preamble of the manual.
This is used by the B14 model (http://wiki.nmr-relax.com/B14) section of the dispersion chapter.

--- a/docs/latex/relax.tex
+++ b/docs/latex/relax.tex
@@ -119,6 +119,7 @@
 
 % Maths commands.
 \setcounter{MaxMatrixCols}{20}
+\DeclareMathOperator{\arccosh}{arccosh}
 \newcommand{\Par}{{\scriptscriptstyle \parallel}}
 \newcommand{\Per}{{\scriptscriptstyle \perp}}
 \newcommand{\Diff}{\mathfrak{D}}
