--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -590,7 +590,7 @@ Establish the complex free precession Eigenfrequency with
 The ground state ensemble evolution frequency $f_{00}$ expressed in separated real and imaginary components, in terms
 of definitions $\zeta , \Psi , h_3 , h_4$ is
 \begin{equation}
-	f_{00} = \frac{1}{2}(\RtwozeroA + \RtwozeroB + \kex) + \frac{\imath}{2}(\dw - h_4) .
+	f_{00} = \frac{1}{2}\left(\RtwozeroA + \RtwozeroB + \kex\right) + \frac{\imath}{2}\left(\dw - h_4\right) .
 \end{equation}
 
 Define substutions for `stay' and `swap' factors are
@@ -598,10 +598,10 @@ Define substutions for `stay' and `swap' factors are
 \begin{align}
 	N & = h_3 + \imath h_4 , \\
 	NN^* & = h_3^2 + h_4^2 , \\
-	F_0 & = (\dw^2 + h_3^2) / NN^* , \\
-	F_2 & = (\dw^2 - h_4^2) / NN^* , \\
-	F_1^b & = (\dw + h_4) (\dw - \imath h_3) / NN^* , \\
-	F_1^{a+b} & = (2\dw^2 + \imath \zeta) / NN^* .
+	F_0 & = \left(\dw^2 + h_3^2\right) / NN^* , \\
+	F_2 & = \left(\dw^2 - h_4^2\right) / NN^* , \\
+	F_1^b & = \left(\dw + h_4\right) \left(\dw - \imath h_3\right) / NN^* , \\
+	F_1^{a+b} & = \left(2\dw^2 + \imath \zeta\right) / NN^* .
 \end{align}
 \end{subequations}
 
@@ -622,11 +622,11 @@ Final result, with identities to assist efficient matrix exponentiation optimise
 	\nu_{1s} & = F_0  \sinh(E_0) - \imath F_2 \sin(E_2), \\
 	\nu_3 & = \sqrt{\nu_{1c}^2 - 1} , \\
 	\nu_4 & = F_1^b (-\alpha_- - h_3 ) + \imath F_1^b (\dw - h_4) , \\
-	\nu_5 & =(-\Delta \Rtwozero + \kex + \imath \dw) \nu_{1s} + 2 (\nu_4 + \kAB F_1^{a+b}) \sinh(E_1) , \\
+	\nu_5 & =\left(-\Delta \Rtwozero + \kex + \imath \dw\right) \nu_{1s} + 2 \left(\nu_4 + \kAB F_1^{a+b}\right) \sinh(E_1) , \\
     y & = \left( \frac{\nu_{1c} - \nu_3}{\nu_{1c} + \nu_3} \right) ^ {\ncyc} , \\
 	T & = \frac{1}{2}(1 + y) + \frac{(1 - y)\nu_5}{2 \nu_3 N} , \\
-	\RtwoeffCR & = \frac{(\RtwozeroA + \RtwozeroB + \kex)}{2} - \frac{\ncyc}{\taucpmg} \, \arccosh(\, \Re(\nu_{1c}) \, ) , \\
-	\Rtwoeff & = \RtwoeffCR - \frac{1}{\taucpmg} \log(\Re(T)) .
+	\RtwoeffCR & = \frac{\RtwozeroA + \RtwozeroB + \kex}{2} - \frac{\ncyc}{\taucpmg} \, \arccosh\left(\Re(\nu_{1c})\right) , \\
+	\Rtwoeff & = \RtwoeffCR - \frac{1}{\taucpmg} \log\left(\Re(T)\right) .
 \end{align}
 \end{subequations}
 
