Grammar fixes for the B14 model (http://wiki.nmr-relax.com/B14) section of the dispersion chapter.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -575,7 +575,7 @@ The equation is
 
 where Appendix 1 in \citet{Baldwin2014} list the recipe for exact calculation of $\Rtwoeff$.
 
-Establish the complex free precession Eigenfrequency with
+Establish the complex free precession eigenfrequency with
 \begin{subequations}
 \begin{align}
 	\Delta \Rtwozero & = \RtwozeroA - \RtwozeroB , \\
@@ -593,7 +593,7 @@ of definitions $\zeta , \Psi , h_3 , h_4$ is
 	f_{00} = \frac{1}{2}\left(\RtwozeroA + \RtwozeroB + \kex\right) + \frac{\imath}{2}\left(\dw - h_4\right) .
 \end{equation}
 
-Define substutions for `stay' and `swap' factors are
+Define substitutions for `stay' and `swap' factors are
 \begin{subequations}
 \begin{align}
 	N & = h_3 + \imath h_4 , \\
