Added some text explaining why the B14 equations do not look like those of the paper.
This is for the B14 model (http://wiki.nmr-relax.com/B14) section of the dispersion chapter.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -574,7 +574,8 @@ The equation is
 \end{subequations}
 
 where Appendix 1 in \citet{Baldwin2014} list the recipe for exact calculation of $\Rtwoeff$.
-
+Note that the following definitions are different to those in the original publication, but match both the reference implementation and the relax implementation.
+The definitions are functionally equivalent.
 Establish the complex free precession eigenfrequency with
 \begin{subequations}
 \begin{align}
