Replaced 'get' and 'got' with alternatives, as this verb is not to be used in formal English.
This is for the B14 model (http://wiki.nmr-relax.com/B14) section of the dispersion chapter of the
manual.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -630,7 +630,7 @@ The final result, with identities to assist efficient matrix exponentiation opti
 \end{align}
 \end{subequations}
 
-The advantage of this code will be that you will always get the right answer provided you got 2-site exchange, in-phase magnetisation and on-resonance pulses. 
+The advantage of this code will be that you will always obtain the correct answer provided you have 2-site exchange, in-phase magnetisation and on-resonance pulses. 
 
 The term $p_D$ is based on product of the off diagonal elements in the CPMG propagator, see supplementary Section 3, \citet{Baldwin2014}.
 
