Clean ups of the Carver and Richards descriptions.
This is for the B14 model (http://wiki.nmr-relax.com/B14) section of the dispersion chapter of the
manual.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -634,7 +634,7 @@ The advantage of this code will be that you will always obtain the correct answe
 
 The term $p_D$ is based on product of the off diagonal elements in the CPMG propagator, see supplementary Section 3, \citet{Baldwin2014}.
 
-It is interesting to consider the region of validity of the Carver Richards result. The two results are equal when the correction is zero, which is true when
+It is interesting to consider the region of validity of the Carver and Richards result. The two results are equal when the correction is zero, which is true when
 \begin{equation}
     \sqrt{v_{1c}^2-1} \approx v_2 + 2k_{\textrm{AB}}p_D .
 \end{equation}
@@ -642,8 +642,8 @@ It is interesting to consider the region of validity of the Carver Richards resu
 This occurs when $k_{\textrm{AB}}p_D$ tends to zero, and so $v_2=v_3$.
 Setting $k_{\textrm{AB}}p_D$ to zero, amounts to neglecting magnetisation that starts on the ground state ensemble and end on the excited state ensemble and vice versa. 
 This will be a good approximation when $p_A \gg p_B$.
-In practise, significant deviations from the Carver Richards equation can be incurred if $p_B > 1$\%.
-Incorporation of the correction term, results in an improved description of the CPMG experiment over the Carver Richards equation \citet{CarverRichards72}.
+In practise, significant deviations from the Carver and Richards equation can be incurred if $p_B > 1$\%.
+Incorporation of the correction term, results in an improved description of the CPMG experiment over \citet{CarverRichards72}.
 
 The reference for this equation is:
 \begin{itemize}
