--- a/docs/latex/relax.tex
+++ b/docs/latex/relax.tex
@@ -215,6 +215,7 @@
 \newcommand{\RtwoZQC}{\mathrm{R}_\mathrm{2,ZQ}^\mathrm{C}}
 \newcommand{\tex}{\tau_\textrm{ex}}
 \newcommand{\taucpmg}{\tau_\textrm{CPMG}}
+\newcommand{\Trelax}{T_\textrm{relax}}
 
 % Natbib Citation format.
 \bibpunct{(}{)}{;}{a}{,}{,}
