Major fix for the R2eff equations for the B14 dispersion model in the manual.
Here tau_CPMG, the time for one CPMG block, was mixed up with T_relax, the total time of all CPMG
blocks.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -567,9 +567,9 @@ It is selected by setting the model to `B14 full'.
 The equation is
 \begin{subequations}
 \begin{align}
-  \Rtwoeff & = \frac{\RtwozeroA + \RtwozeroB + \kex }{2}-\frac{\ncyc}{\taucpmg} \cosh{}^{-1}(v_{1c}) \nonumber \\
-& \qquad - \frac{1}{\taucpmg}\ln{\left(\frac{1+y}{2} + \frac{1-y}{2\sqrt{v_{1c}^2-1}}(v_2 + 2 \kAB p_D)\right)} , \\
-    & = \RtwoeffCR - \frac{1}{\taucpmg}\ln{\left( \frac{1+y}{2} + \frac{1-y}{2\sqrt{v_{1c}^2-1}}(v_2 + 2\kAB p_D )\right)} ,
+  \Rtwoeff & = \frac{\RtwozeroA + \RtwozeroB + \kex }{2}-\frac{\ncyc}{\Trelax} \cosh{}^{-1}(v_{1c}) \nonumber \\
+& \qquad - \frac{1}{\Trelax}\ln{\left(\frac{1+y}{2} + \frac{1-y}{2\sqrt{v_{1c}^2-1}}(v_2 + 2 \kAB p_D)\right)} , \\
+    & = \RtwoeffCR - \frac{1}{\Trelax}\ln{\left( \frac{1+y}{2} + \frac{1-y}{2\sqrt{v_{1c}^2-1}}(v_2 + 2\kAB p_D )\right)} ,
 \end{align}
 \end{subequations}
 
