--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -567,9 +567,9 @@ It is selected by setting the model to `B14 full'.
 The equation is
 \begin{subequations}
 \begin{align}
-  \Rtwoeff & = \frac{\RtwozeroA + \RtwozeroB + \kex }{2}-\frac{\ncyc}{\Trelax} \cosh{}^{-1}(v_{1c}) \nonumber \\
-& \qquad - \frac{1}{\Trelax}\ln{\left(\frac{1+y}{2} + \frac{1-y}{2\sqrt{v_{1c}^2-1}}(v_2 + 2 \kAB p_D)\right)} , \\
-    & = \RtwoeffCR - \frac{1}{\Trelax}\ln{\left( \frac{1+y}{2} + \frac{1-y}{2\sqrt{v_{1c}^2-1}}(v_2 + 2\kAB p_D )\right)} ,
+  \Rtwoeff & = \frac{\RtwozeroA + \RtwozeroB + \kex }{2}-\frac{\ncyc}{\Trelax} \cosh{}^{-1}(\nu_{1c}) \nonumber \\
+& \qquad - \frac{1}{\Trelax}\ln{\left(\frac{1+y}{2} + \frac{1-y}{2\sqrt{\nu_{1c}^2-1}}(\nu_2 + 2 \kAB p_D)\right)} , \\
+    & = \RtwoeffCR - \frac{1}{\Trelax}\ln{\left( \frac{1+y}{2} + \frac{1-y}{2\sqrt{\nu_{1c}^2-1}}(\nu_2 + 2\kAB p_D )\right)} ,
 \end{align}
 \end{subequations}
 
