Clean ups for the end of the B14 dispersion model section of the manual.
Here a number of 'v' were changed to \nu and the standard \kAB, \pA, and \pB are now used.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -636,13 +636,13 @@ The term $p_D$ is based on product of the off diagonal elements in the CPMG prop
 
 It is interesting to consider the region of validity of the Carver and Richards result. The two results are equal when the correction is zero, which is true when
 \begin{equation}
-    \sqrt{v_{1c}^2-1} \approx v_2 + 2k_{\textrm{AB}}p_D .
+    \sqrt{\nu_{1c}^2-1} \approx \nu_2 + 2 \kAB p_D .
 \end{equation}
 
-This occurs when $k_{\textrm{AB}}p_D$ tends to zero, and so $v_2=v_3$.
-Setting $k_{\textrm{AB}}p_D$ to zero amounts to neglecting magnetisation that starts on the ground state ensemble and end on the excited state ensemble and vice versa. 
-This will be a good approximation when $p_A \gg p_B$.
-In practise, significant deviations from the Carver and Richards equation can be incurred if $p_B > 1$\%.
+This occurs when $\kAB p_D$ tends to zero, and so $\nu_2 = \nu_3$.
+Setting $\kAB p_D$ to zero amounts to neglecting magnetisation that starts on the ground state ensemble and end on the excited state ensemble and vice versa. 
+This will be a good approximation when $\pA \gg \pB$.
+In practise, significant deviations from the Carver and Richards equation can be incurred if $\pB > 1$\%.
 Incorporation of the correction term results in an improved description of the CPMG experiment over \citet{CarverRichards72}.
 
 The reference for this equation is:
