Added some symmetry to the T equation in the B14 dispersion model section of the manual.

--- a/docs/latex/dispersion.tex
+++ b/docs/latex/dispersion.tex
@@ -624,7 +624,7 @@ The final result, with identities to assist efficient matrix exponentiation opti
 	\nu_4 & = F_1^b (-\alpha_- - h_3) + \imath F_1^b (\dw - h_4) , \\
 	\nu_5 & = \left(-\Delta \Rtwozero + \kex + \imath \dw\right) \nu_{1s} + 2 \left(\nu_4 + \kAB F_1^{a+b}\right) \sinh(E_1) , \\
     y & = \left( \frac{\nu_{1c} - \nu_3}{\nu_{1c} + \nu_3} \right) ^{\ncyc} , \\
-	T & = \frac{1}{2}(1 + y) + \frac{(1 - y)\nu_5}{2 \nu_3 N} , \\
+	T & = \frac{1 + y}{2} + \frac{1 - y}{2} \frac{\nu_5}{\nu_3 N} , \\
 	\RtwoeffCR & = \frac{\RtwozeroA + \RtwozeroB + \kex}{2} - \frac{\ncyc}{\Trelax} \, \arccosh\left(\Re(\nu_{1c})\right) , \\
 	\Rtwoeff & = \RtwoeffCR - \frac{1}{\Trelax} \log\left(\Re(T)\right) .
 \end{align}
